# Python_Terminal_Text_Templates

./: .coverage  .coveragerc  .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
tests/: a_view.txt  a_view_with_ansi_colours.txt  test_text_template.py
text_template/: __init__.py  text_template.py
